--- a/TriadApp/templates/TriadApp/superadmin/super_admin.html
+++ b/TriadApp/templates/TriadApp/superadmin/super_admin.html
@@ -58,7 +58,7 @@
                     
                     <div class="text-center">
                         <h2 class="text-lg font-semibold text-white-800">
-                            {{ super_admin.first_name }}
+                            {{ super_admin.first_name }} {{ super_admin.middle_name }} {{ super_admin.last_name }}
                         </h2>
                         <p class="text-sm text-gray-500">
                             Super Admin
