index links fix

--- a/TriadApp/templates/TriadApp/index.html
+++ b/TriadApp/templates/TriadApp/index.html
@@ -60,7 +60,7 @@
                 </div>
 
                 <!-- Get Started Button -->
-                <a href="{% url 'superadmin_login' %}" 
+                <a href="{% url 'login' %}" 
                    class="inline-flex items-center px-8 py-3 text-lg font-semibold text-white 
                           bg-blue-600 rounded-lg shadow-lg hover:bg-blue-700 
                           transform transition duration-200 hover:scale-105">
